# cubes

./: Cargo.toml  README.md  cube-0.len_side-2.397_tube_diameter-0.595_segments-50.stl  cube-1.len_side-2.397_tube_diameter-0.612_segments-50.stl  cube-2.len_side-2.397_tube_diameter-0.629_segments-50.stl  cube-3.len_side-2.397_tube_diameter-0.646_segments-50.stl  cube-4.len_side-2.397_tube_diameter-0.663_segments-50.stl  cube-with-tube-0.len_side-2.397_tube_diameter-0.561_segments-50.stl  cube-with-tube-0.len_side-3.000_tube_diameter-0.561_segments-50.stl  cube-with-tube-1.len_side-2.397_tube_diameter-0.578_segments-50.stl  cube-with-tube-1.len_side-2.397_tube_diameter-0.646_segments-50.stl  cube-with-tube-2.len_side-2.397_tube_diameter-0.595_segments-50.stl  cube-with-tube-2.len_side-2.397_tube_diameter-0.731_segments-50.stl  cube-with-tube-3.len_side-2.397_tube_diameter-0.612_segments-50.stl  cube-with-tube-3.len_side-2.397_tube_diameter-0.816_segments-50.stl  cube-with-tube-4.len_side-2.397_tube_diameter-0.629_segments-50.stl  cube-with-tube-4.len_side-2.397_tube_diameter-0.901_segments-50.stl  cube-with-tube-5.len_side-2.397_tube_diameter-0.986_segments-50.stl  cube-with-tube-6.len_side-2.397_tube_diameter-1.071_segments-50.stl  cube-with-tube-7.len_side-2.397_tube_diameter-1.156_segments-50.stl  cube-with-tube-8.len_side-2.397_tube_diameter-1.241_segments-50.stl  cube-with-tube.len_side-3.000_tub_diameter-0.561_segments-50.stl  cube-with-tube.len_side3.000_tub_diameter0.561_tube_wall_thickness0.10_segments50.stl  cube.len_side-3.000.stl  (+1 more)
src/: main.rs
(+2 files in other folders)
